[package]
name = "cumulus-network"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# other deps
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
log = "0.4.8"
parking_lot = "0.10.2"
derive_more = "0.99.2"

# Substrate deps
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "master" }

# Indracore deps
indracore-primitives = { path = "../../primitives" }
indracore-statement-table = { path = "../../statement-table" }
indracore-overseer = { path = "../../node/overseer" }
indracore-node-primitives = { path = "../../node/primitives" }
indracore-node-subsystem = { path = "../../node/subsystem" }
indracore-service = { path = "../../node/service" }
indracore-parachain = { path = "../../parachain" }

# Cumulus deps
cumulus-primitives = { path = "../primitives" }
