[package]
name = "cumulus-parachain-upgrade"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
description = "pallet to manage parachain upgrades"

[dependencies]
# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }
cumulus-runtime = { path = "../runtime", default-features = false }

# Indracore dependencies
parachain = { package = "indracore-parachain", path = "../../parachain", default-features = false }

# Substrate dependencies
frame-system = { path = "../../substrate/frame/system" }
frame-support = { path = "../../substrate/frame/support" }
pallet-balances = { path = "../../substrate/frame/balances" }

sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-inherents = { path = "../../substrate/primitives/inherents" }
sp-io = { path = "../../substrate/primitives/io" }
sp-std = { path = "../../substrate/primitives/std" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-version = { path = "../../substrate/primitives/version" }
sp-state-machine = { path = "../../substrate/primitives/state-machine" }

# Other Dependencies
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"]}
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[dev-dependencies]
sp-externalities = { path = "../../substrate/primitives/externalities" }
substrate-test-runtime-client = { path = "../../substrate/test-utils/runtime/client" }
sp-version = { path = "../../substrate/primitives/version" }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'pallet-balances/std',
	'cumulus-runtime/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'sp-state-machine/std',
	'frame-system/std',
	'cumulus-primitives/std',
]

