[package]
name = "cumulus-parachain-upgrade"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
description = "pallet to manage parachain upgrades"

[dependencies]
# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }
cumulus-runtime = { path = "../runtime", default-features = false }

# Indracore dependencies
parachain = { package = "indracore-parachain", path = "../../parachain", default-features = false }

# Substrate dependencies
frame-system = { path = "../../substrate/frame/system", default-features = false  }
frame-support = { path = "../../substrate/frame/support", default-features = false  }
pallet-balances = { path = "../../substrate/frame/balances", default-features = false  }

sp-core = { git = "https://github.com/paritytech/substrate", version = "2.0.0-rc5", default-features = false , branch = "master" }
# sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false }
sp-io = { path = "../../substrate/primitives/io", default-features = false }
sp-std = { path = "../../substrate/primitives/std", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-version = { path = "../../substrate/primitives/version", default-features = false }
sp-state-machine = { path = "../../substrate/primitives/state-machine", default-features = false }

# Other Dependencies
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"]}
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[dev-dependencies]
sp-externalities = { path = "../../substrate/primitives/externalities", default-features = false  }
substrate-test-runtime-client = { path = "../../substrate/test-utils/runtime/client", default-features = false  }
sp-version = { path = "../../substrate/primitives/version", default-features = false  }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'pallet-balances/std',
	'cumulus-runtime/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-io/std',
	'sp-std/std',
	'sp-state-machine/std',
	'frame-system/std',
	'cumulus-primitives/std',
	# "parachain/std"
]