[package]
name = "cumulus-primitives"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = [ "derive" ] }
impl-trait-for-tuples = "0.1.3"

sp-inherents = { path = "../../substrate/primitives/inherents", default-features = false }
sp-std = { path = "../../substrate/primitives/std", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-trie = { path = "../../substrate/primitives/trie", default-features = false }
sc-chain-spec = { path = "../../substrate/client/chain-spec", optional = true, default-features = false }

indracore-parachain = { path = "../../parachain",  default-features = false }
indracore-primitives = { path = "../../primitives", default-features = false }
indracore-core-primitives = { path = "../../core-primitives", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-inherents/std",
    "sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-trie/std",
    "sc-chain-spec",
    "indracore-primitives/std",
	"indracore-parachain/std",
	"indracore-core-primitives/std",
]