[package]
name = "cumulus-primitives"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = [ "derive" ] }
impl-trait-for-tuples = "0.1.3"

# Substrate dependencies
sp-inherents = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sc-chain-spec = { git = "https://github.com/selendra/substrate", optional = true, branch = "master" }
sp-core = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-trie = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }

# indracore dependencies
indracore-parachain = { path = "../../parachain", default-features = false }
indracore-primitives = { path = "../../primitives", default-features = false }
indracore-core-primitives = { path = "../../core-primitives", default-features = false }


[features]
default = [ "std" ]
std = [
    "codec/std",
	"sc-chain-spec",
	"sp-std/std",
    "sp-inherents/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-trie/std",
	"indracore-primitives/std",
	"indracore-parachain/std",
    "indracore-core-primitives/std",
]