[package]
name = "cumulus-runtime"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = [ "derive" ] }
hash-db = { version = "0.15.2", default-features = false }
memory-db = { version = "0.25.0", default-features = false }
trie-db = { version = "0.22.0", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-trie = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-state-machine = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-externalities = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
frame-executive = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }

# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }

# Indracore dependencies
parachain = { package = "indracore-parachain", path = "../../parachain", default-features = false, features = [ "wasm-api" ] }

[features]
default = ["std"]
std = [
	"codec/std",
    "memory-db/std",
	"hash-db/std",
	"trie-db/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
    "sp-state-machine/std",
	"sp-externalities/std",
	"sp-trie/std",
	"frame-executive/std",
	"parachain/std",
    "cumulus-primitives/std",
]