[package]
name = "cumulus-service"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Other deps
futures = "0.3.6"
tracing = "0.1.22"

# Substrate dependencies
sc-service = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-tracing = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "master" }

# Cumulus dependencies
cumulus-consensus = { path = "../consensus" }
cumulus-collator = { path = "../collator" }
cumulus-primitives = { path = "../primitives" }

# indracore dependencies
indracore-primitives = { path = "../../primitives" }
indracore-service = { path = "../../node/service" }
indracore-overseer = { path = "../../node/overseer" }
