[package]
name = "xcm-handler"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ], default-features = false }

# Substrate Dependencies
sp-std = { path = "../../substrate/primitives/std", default-features = false }
frame-support = { path = "../../substrate/frame/support", default-features = false }
frame-system = { path = "../../substrate/frame/system", default-features = false }
# Indracore Dependencies
xcm = { path = "../../xcm", default-features = false }

# Cumulus Dependencies
cumulus-primitives = { path = "../primitives", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"cumulus-primitives/std",
	"xcm/std"
]