[package]
name = "xcm-handler"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", features = [ "derive" ], default-features = false }

# Substrate Dependencies
sp-std = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }

# Polkadot Dependencies
xcm = { path = "../../xcm", default-features = false }

# Cumulus Dependencies
cumulus-primitives = { path = "../primitives", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"cumulus-primitives/std",
	"xcm/std"
]