[package]
name = "indracore-node-collation-generation"
version = "0.1.0"
authors = ["Selendra <nath@selendra.org>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
tracing = "0.1.22"
tracing-futures = "0.2.4"

indracore-erasure-coding = { path = "../erasure-coding" }
indracore-node-primitives = { path = "../primitives" }
indracore-node-subsystem = { path = "../subsystem" }
indracore-node-subsystem-util = { path = "../subsystem-util" }
indracore-primitives = { path = "../../primitives" }
sp-core = { path = "../../substrate/primitives/core" }
thiserror = "1.0.22"

[dev-dependencies]
indracore-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
