[package]
name = "node-executor"
version = "2.0.0"
authors = ["Selendra <nath@selendra.org>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-executor = { path = "../../substrate/client/executor" }
frame-benchmarking = { path = "../../substrate/frame/benchmarking" }
node-indracore-runtime = { path = '../../runtime/indracore', version = '2.0.0' }



[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
