[package]
name = "indracore-overseer"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
futures = "0.3.8"
tracing = "0.1.22"
tracing-futures = "0.2.4"
futures-timer = "3.0.2"
streamunordered = "0.5.1"
indracore-primitives = { path = "../../primitives" }
client = { package = "sc-client-api", git = "https://github.com/LayNath242/substrate", branch = "master" }
indracore-subsystem = { package = "indracore-node-subsystem", path = "../subsystem" }
indracore-node-subsystem-util = { path = "../subsystem-util" }
indracore-node-primitives = { package = "indracore-node-primitives", path = "../primitives" }
async-trait = "0.1.42"

[dev-dependencies]
sp-core = { git = "https://github.com/LayNath242/substrate", branch = "master" }
indracore-node-network-protocol = { path = "../network/protocol" }
futures = { version = "0.3.8", features = ["thread-pool"] }
futures-timer = "3.0.2"
femme = "2.1.1"
kv-log-macro = "1.0.7"
