[package]
name = "indracore-node-primitives"
version = "0.1.0"
authors = ["Selendra <nath@selendra.org>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
futures = "0.3.8"
indracore-primitives = { path = "../../primitives" }
indracore-statement-table = { path = "../statement-table" }
parity-scale-codec = { version = "1.3.5", default-features = false, features = ["derive"] }
runtime_primitives = { package = "sp-runtime", path = "../../substrate/primitives/runtime", default-features = false }
sp-core = { path = "../../substrate/primitives/core" }
sp-consensus-vrf = { path = "../../substrate/primitives/consensus/vrf" }
