[package]
name = "indracore-node-primitives"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
futures = "0.3.11"
indracore-primitives = { path = "../../primitives" }
indracore-statement-table = { path = "../../statement-table" }
parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/laynath242/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/laynath242/substrate", branch = "master" }
sp-consensus-vrf = { git = "https://github.com/laynath242/substrate", branch = "master" }
