[package]
name = "indracore-service"
version = "0.8.3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate Client
sc-authority-discovery = { path = "../../substrate/client/authority-discovery" }
babe = { package = "sc-consensus-babe", path = "../../substrate/client/consensus/babe" }
grandpa = { package = "sc-finality-grandpa", path = "../../substrate/client/finality-grandpa" }
sc-block-builder = { path = "../../substrate/client/block-builder" }
sc-chain-spec = { path = "../../substrate/client/chain-spec" }
sc-client-api = { path = "../../substrate/client/api" }
sc-client-db = { path = "../../substrate/client/db" }
sc-consensus = { path = "../../substrate/client/consensus/common" }
sc-consensus-slots = { path = "../../substrate/client/consensus/slots" }
sc-executor = { path = "../../substrate/client/executor" }
sc-network = { path = "../../substrate/client/network" }
sc-transaction-pool = { path = "../../substrate/client/transaction-pool" }
service = { package = "sc-service", path = "../../substrate/client/service", default-features = false }
telemetry = { package = "sc-telemetry", path = "../../substrate/client/telemetry" }

# Substrate Primitives
sp-authority-discovery = { path = "../../substrate/primitives/authority-discovery" }
babe-primitives = { package = "sp-consensus-babe", path = "../../substrate/primitives/consensus/babe" }
consensus_common = { package = "sp-consensus", path = "../../substrate/primitives/consensus/common" }
grandpa_primitives = { package = "sp-finality-grandpa", path = "../../substrate/primitives/finality-grandpa" }
inherents = { package = "sp-inherents", path = "../../substrate/primitives/inherents" }
sp-api = { path = "../../substrate/primitives/api" }
sp-block-builder = { path = "../../substrate/primitives/block-builder" }
sp-blockchain = { path = "../../substrate/primitives/blockchain" }
sp-core = { path = "../../substrate/primitives/core" }
sp-io = { path = "../../substrate/primitives/io" }
sp-keystore = { path = "../../substrate/primitives/keystore" }
sp-offchain = { package = "sp-offchain", path = "../../substrate/primitives/offchain" }
sp-runtime = { path = "../../substrate/primitives/runtime" }
sp-session = { path = "../../substrate/primitives/session" }
sp-storage = { path = "../../substrate/primitives/storage" }
sp-transaction-pool = { path = "../../substrate/primitives/transaction-pool" }
sp-trie = { path = "../../substrate/primitives/trie" }

# Substrate Pallets
pallet-babe = { path = "../../substrate/frame/babe" }
pallet-im-online = { path = "../../substrate/frame/im-online" }
pallet-staking = { path = "../../substrate/frame/staking" }
pallet-transaction-payment-rpc-runtime-api = { path = "../../substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-contracts = { path = "../../substrate/frame/contracts" }
pallet-contracts-rpc-runtime-api = { path = "../../substrate/frame/contracts/rpc/runtime-api" }

# Substrate Other
frame-benchmarking = { path = "../../substrate/frame/benchmarking" }
frame-system-rpc-runtime-api = { path = "../../substrate/frame/system/rpc/runtime-api" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../substrate/utils/prometheus" }

# External Crates
futures = "0.3.8"
hex-literal = "0.3.1"
tracing = "0.1.22"
tracing-futures = "0.2.4"
serde = { version = "1.0.118", features = ["derive"] }
thiserror = "1.0.21"

# Indracore
indracore-node-core-proposer = { path = "../core/proposer" }
indracore-overseer = { path = "../overseer" }
indracore-parachain = { path = "../../parachain" }
indracore-primitives = { path = "../../primitives" }
indracore-rpc = { path = "../../rpc" }
indracore-subsystem = { package = "indracore-node-subsystem", path = "../subsystem" }
indracore-node-subsystem-util = { path = "../subsystem-util" }
indracore-runtime-parachains = { path = "../../runtime/parachains" }

# Indracore Runtimes
indracore-runtime = { path = "../../runtime/indracore" }
xelendra-runtime = { path = "../../runtime/xelendra" }

# Indracore Subsystems
indracore-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
indracore-availability-distribution = { path = "../network/availability-distribution", optional = true }
indracore-collator-protocol = { path = "../network/collator-protocol", optional = true }
indracore-network-bridge = { path = "../network/bridge", optional = true }
indracore-node-collation-generation = { path = "../collation-generation", optional = true }
indracore-node-core-av-store = { path = "../core/av-store", optional = true }
indracore-node-core-backing = { path = "../core/backing", optional = true }
indracore-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
indracore-node-core-candidate-selection = { path = "../core/candidate-selection", optional = true }
indracore-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
indracore-node-core-chain-api = { path = "../core/chain-api", optional = true }
indracore-node-core-provisioner = { path = "../core/provisioner", optional = true }
indracore-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
indracore-pov-distribution = { path = "../network/pov-distribution", optional = true }
indracore-statement-distribution = { path = "../network/statement-distribution", optional = true }

[dev-dependencies]
indracore-test-client = { path = "../test/client" }
env_logger = "0.8.2"

[features]
default = ["db", "full-node"]
db = ["service/db"]
full-node = [
	"indracore-node-core-av-store",
]
runtime-benchmarks = ["indracore-runtime/runtime-benchmarks"]
real-overseer = [
	"indracore-availability-bitfield-distribution",
	"indracore-availability-distribution",
	"indracore-collator-protocol",
	"indracore-network-bridge",
	"indracore-node-collation-generation",
	"indracore-node-core-backing",
	"indracore-node-core-bitfield-signing",
	"indracore-node-core-candidate-selection",
	"indracore-node-core-candidate-validation",
	"indracore-node-core-chain-api",
	"indracore-node-core-provisioner",
	"indracore-node-core-runtime-api",
	"indracore-pov-distribution",
	"indracore-statement-distribution",
]
